--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,12 @@ alembic==1.0.0
 click==6.7
 coverage==4.5.1
 Flask==1.0.2
+Flask-Admin==1.5.1
+Flask-BasicAuth==0.2.0
 Flask-Cors==3.0.6
 Flask-Migrate==2.2.1
 Flask-SQLAlchemy==2.3.2
+freezegun==0.3.10
 gunicorn==19.9.0
 itsdangerous==0.24
 Jinja2==2.10
@@ -17,3 +20,4 @@ python-editor==1.0.3
 six==1.11.0
 SQLAlchemy==1.2.10
 Werkzeug==0.14.1
+WTForms==2.2.1
