--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,29 @@
 alembic==1.0.0
 click==6.7
 coverage==4.5.1
+dnspython==1.15.0
+eventlet==0.24.1
 Flask==1.0.2
 Flask-Admin==1.5.1
 Flask-BasicAuth==0.2.0
 Flask-Cors==3.0.6
 Flask-Migrate==2.2.1
+Flask-SocketIO==3.0.1
 Flask-SQLAlchemy==2.3.2
 freezegun==0.3.10
+greenlet==0.4.14
 gunicorn==19.9.0
 itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
+monotonic==1.5
 nose2==0.8.0
 psycopg2-binary==2.7.5
 python-dateutil==2.7.3
 python-editor==1.0.3
+python-engineio==2.2.0
+python-socketio==2.0.0
 six==1.11.0
 SQLAlchemy==1.2.10
 Werkzeug==0.14.1
