--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 alembic==1.0.0
+asn1crypto==0.24.0
+bcrypt==3.1.4
+cffi==1.11.5
 click==6.7
 coverage==4.5.1
+cryptography==2.3.1
 dnspython==1.15.0
 eventlet==0.24.1
 Flask==1.0.2
 Flask-Admin==1.5.1
 Flask-BasicAuth==0.2.0
+Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.6
 Flask-Migrate==2.2.1
 Flask-SocketIO==3.0.1
@@ -13,6 +18,7 @@ Flask-SQLAlchemy==2.3.2
 freezegun==0.3.10
 greenlet==0.4.14
 gunicorn==19.9.0
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
@@ -20,6 +26,8 @@ MarkupSafe==1.0
 monotonic==1.5
 nose2==0.8.0
 psycopg2-binary==2.7.5
+pycparser==2.18
+PyJWT==1.6.4
 python-dateutil==2.7.3
 python-editor==1.0.3
 python-engineio==2.2.0
