--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.0.0
 asn1crypto==0.24.0
 bcrypt==3.1.4
+certifi==2018.8.24
 cffi==1.11.5
+chardet==3.0.4
 click==6.7
 coverage==4.5.1
 cryptography==2.3.1
@@ -28,11 +30,16 @@ nose2==0.8.0
 psycopg2-binary==2.7.5
 pycparser==2.18
 PyJWT==1.6.4
+PySocks==1.6.8
 python-dateutil==2.7.3
 python-editor==1.0.3
 python-engineio==2.2.0
 python-socketio==2.0.0
+pytz==2018.5
+requests==2.19.1
 six==1.11.0
 SQLAlchemy==1.2.10
+twilio==6.17.0
+urllib3==1.23
 Werkzeug==0.14.1
 WTForms==2.2.1
